# karl

./: .gitmodules  CMakeLists.txt  README.md
docs/: plan
src/: CMakeLists.txt  guard.hpp  karl.cpp  karl.hpp  main.cpp  rusqlservice.cpp  rusqlservice.hpp  storage.cpp  storage.hpp
src/karl/: CMakeLists.txt  cli.hpp  config.cpp  config.hpp  image_citations.cpp  image_citations.hpp  karl.cpp  karl.hpp  karluser.hpp  main.cpp  price_normalization.hpp  session.hpp  sessionticket.hpp  similarity.hpp  storage.cpp  storage.hpp  storage_read_fusion.hpp  storage_write_fusion.hpp
src/karl/api/: api_exception.cpp  api_exception.hpp  api_server.cpp  api_server.hpp  request.cpp  request.hpp  response_handler.cpp  response_handler.hpp  uri.cpp  uri.hpp
src/karl/sql/: absorb_productclass  absorb_productclass_delete  absorb_productclass_delete_tag_productclass  absorb_productclass_product  absorb_productclass_tag_productclass  absorb_tag  absorb_tagcategory  add_imagecitation  add_karluser  add_product  add_productclass  add_productdetails  add_productdetailsrecord  add_productlog  add_session  add_sessionticket  add_tag  add_tagalias  add_tagcategory  add_tagcategoryalias  bind_tag  get_all_productdetails_by_product  get_karluser  get_karluser_by_name  get_last_productdetails  get_last_productdetails_by_name  get_last_productdetails_by_product  get_last_productdetails_by_productclass  get_product_by_identifier  get_productclass  get_recent_productlog  get_session_by_token  get_sessionticket  get_tag_by_name  get_tagalias_by_name  get_tagalias_by_tagcategory_name  get_tagcategory_by_name  get_tagcategoryalias_by_name  get_tags  get_tags_by_productclass  (+4 more)
src/karl/sql/schema/: 1  10  11  12  13  2  3  4  5  6  7  8  9
src/karl/storage/: name_iter.hpp  query_gen.hpp  storage.cpp  storage.hpp  storage_common.hpp  storage_products.hpp  storage_read_fusion.hpp  storage_tags.hpp  storage_users.hpp  storage_write_fusion.hpp  table_repository.hpp
src/karl/util/: hungarian_fast.hpp  levenshtein.hpp  log.cpp  log.hpp  matrix.hpp  similarity_matrix.hpp  timer.hpp
